components/traefik/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-svc
  namespace: traefik
spec:
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - protocol: TCP
      port: 9000
